[gd_scene load_steps=4 format=3 uid="uid://b3me75q3hkh8x"]

[ext_resource type="Script" uid="uid://ba8bmya0mj64r" path="res://stage_menu.gd" id="1_fcg0l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p3jrs"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_at0u2"]

[node name="StageMenu" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fcg0l")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1000
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1500.0
offset_top = -1500.0
offset_right = 1500.0
offset_bottom = 1500.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="GridContainer" type="GridContainer" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -142.0
offset_top = -77.0
offset_right = 142.0
offset_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/v_separation = 40

[node name="StageOneButton" type="Button" parent="GridContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_font_sizes/font_size = 63
theme_override_styles/focus = SubResource("StyleBoxEmpty_p3jrs")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_p3jrs")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_p3jrs")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_p3jrs")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_p3jrs")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_at0u2")
theme_override_styles/hover = SubResource("StyleBoxEmpty_p3jrs")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_p3jrs")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_p3jrs")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_p3jrs")
theme_override_styles/normal = SubResource("StyleBoxEmpty_p3jrs")
text = "Stage 1"

[node name="BackButton" type="Button" parent="GridContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_font_sizes/font_size = 63
theme_override_styles/focus = SubResource("StyleBoxEmpty_p3jrs")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_p3jrs")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_p3jrs")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_p3jrs")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_p3jrs")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_at0u2")
theme_override_styles/hover = SubResource("StyleBoxEmpty_p3jrs")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_p3jrs")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_p3jrs")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_p3jrs")
theme_override_styles/normal = SubResource("StyleBoxEmpty_p3jrs")
text = "Back"
